k8s/catalog-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-api
  namespace: fcg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-api
  template:
    metadata:
      labels:
        app: catalog-api
    spec:
      containers:
        - name: catalog-api
          image: catalog-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-api
  namespace: fcg
spec:
  selector:
    app: catalog-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
