k8s/datadog-agent.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: datadog-agent
  namespace: fcg
  labels:
    app: datadog-agent
spec:
  selector:
    matchLabels:
      app: datadog-agent
  template:
    metadata:
      labels:
        app: datadog-agent
      annotations:
        container.apparmor.security.beta.kubernetes.io/agent: unconfined
    spec:
      serviceAccountName: datadog-agent
      tolerations:
        - operator: Exists
      containers:
        - name: agent
          image: gcr.io/datadoghq/agent:7.58.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8125
              name: dogstatsdport
              protocol: UDP
            - containerPort: 8126
              name: traceport
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: dockersocket
              mountPath: /var/run/docker.sock
              readOnly: true
            - name: procdir
              mountPath: /host/proc
              readOnly: true
            - name: cgroups
              mountPath: /host/sys/fs/cgroup
              readOnly: true
            - name: pointerdir
              mountPath: /opt/datadog-agent/run
            - name: logpodpath
              mountPath: /var/log/pods
              readOnly: true
            - name: logscontainerspath
              mountPath: /var/lib/docker/containers
              readOnly: true
      volumes:
        - name: dockersocket
          hostPath:
            path: /var/run/docker.sock
        - name: procdir
          hostPath:
            path: /proc
        - name: cgroups
          hostPath:
            path: /sys/fs/cgroup
        - name: pointerdir
          hostPath:
            path: /opt/datadog-agent/run
        - name: logpodpath
          hostPath:
            path: /var/log/pods
        - name: logscontainerspath
          hostPath:
            path: /var/lib/docker/containers
---
apiVersion: v1
kind: Service
metadata:
  name: datadog-agent
  namespace: fcg
  labels:
    app: datadog-agent
spec:
  selector:
    app: datadog-agent
  ports:
    - port: 8125
      targetPort: 8125
      protocol: UDP
      name: dogstatsd
    - port: 8126
      targetPort: 8126
      protocol: TCP
      name: trace
  internalTrafficPolicy: Local
