k8s/payments-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-api
  namespace: fcg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-api
  template:
    metadata:
      labels:
        app: payments-api
    spec:
      containers:
        - name: payments-api
          image: payments-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: payments-api
  namespace: fcg
spec:
  selector:
    app: payments-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
