k8s/payments-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-postgres
  namespace: fcg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-postgres
  template:
    metadata:
      labels:
        app: payments-postgres
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 70
        runAsGroup: 70
        fsGroup: 70
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: payments-postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
              add: ["CHOWN", "FOWNER", "SETUID", "SETGID"]
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "postgres"]
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 10
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: payments-postgres-storage
      volumes:
        - name: payments-postgres-storage
          persistentVolumeClaim:
            claimName: payments-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: payments-postgres
  namespace: fcg
spec:
  selector:
    app: payments-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
